style.css
/* ... */
.hero .content {
  padding: 1.4rem 7%;
  max-width: 60rem;
}
.hero .content h1 {
  font-size: 4rem;
  color: var(--text);
}
.hero .content h1 span {
  color: var(--primary);
}
.hero .content h3 {
  font-size: 2rem;
  color: var(--tersiery);
  font-weight: 300;
  line-height: 1.2rem;
  margin-top: 1rem;
  font-weight: 500;
}
.hero .content h3 > span {
  color: rgba(82, 82, 82, 0.3);
}
.hero .content h1 span {
  position: relative;
}
.hero .content h1 span::after {
  content: "";
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  border-left: 2px solid var(--primary);
  animation: typing 1.5s steps(10) infinite;
  background-color: rgb(245, 245, 245);
}

@keyframes typing {
  100% {
    left: 100%;
    margin: 0 -32px 0 32px;
  }
}
.hero .content p {
  font-size: 1.3rem;
  font-weight: 300;
  line-height: 1.6;
  margin-top: 1.6rem;
  color: #bbb;
}
.hero .content .btn-more {
  display: inline-block;
  margin-top: 1.6rem;
  padding: 0.8rem 1.6rem;
  background-color: var(--primary);
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
  color: #fff;
  border-radius: 1rem;
  font-weight: 500;
  font-size: 1.2rem;
  box-sizing: border-box;
  transition: 1s;
}

.hero .content .btn-more:hover {
  background-color: var(--tersiery);
}
.hero .content .btn-more i {
  display: inline-block;
  padding-left: 0.2rem;
  font-size: 1rem;
}

/* About */

.about {
  padding: 12rem 7% 1.4rem;
  text-align: center;
}

.about .row {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 6rem;
}
.about .row .about-img {
  max-width: 26rem;
  max-height: 26rem;
  position: relative;
  background-color: var(--primary);
}
/* .about .row .about-img::after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 60%;
  bottom: -20px;
  background: linear-gradient(0deg, rgba(20, 29, 38, 1) 15%, #ffffff00 85%);
} */
.about .row .about-img img {
  width: 98%;
}
.about .row .about-content {
  max-width: 26rem;
  max-height: 26rem;
  text-align: left;
}
.about .row .about-content h2 {
  font-size: 4.5rem;
  font-weight: 500;
}
.about .row .about-content h2 span {
  color: var(--primary);
}
.about .row .about-content h3 {
  font-size: 1.3rem;
  font-weight: 500;
  margin-top: 1rem;
  color: var(--primary);
}
.about .row .about-content p {
  font-size: 1.1rem;
  font-weight: 300;
  margin-top: 1rem;
  color: #dbdbdb;
}

/* Skill */

.skill {
  padding: 8rem 7% 1.4rem;
  background-color: var(--secondary);
}
.skill .header {
  width: 100%;
  margin-bottom: 6rem;
  display: grid;
  place-items: center;
  text-align: center;
}
.skill .header h2 {
  font-size: 4rem;
  font-weight: 500;
}
.skill .header h2 span {
  color: var(--primary);
}
.skill .header p {
  margin-top: 0.4rem;
  font-size: 1.2rem;
  font-weight: 300;
  color: #dbdbdb;
}
.skill-main {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 5rem;
  grid-row-gap: 2rem;
}
.skill-main .skill-bar .skill-info {
  display: flex;
  justify-content: space-between;
  padding: 0 0.8rem;
}
.skill-main .skill-bar .skill-info p {
  font-size: 1rem;
  font-weight: 500;
}
.skill-bar .bar {
  width: 100%;
  height: 0.8rem;
  background-color: var(--secondary);
  border-radius: 0.8rem;
  margin-top: 0.5rem;
  position: relative;
  overflow: hidden;
}
.skill-bar .bar span {
  width: 50%;
  height: 100%;
  position: absolute;
  background-color: var(--primary);
}
.skill-bar .bar .html {
  width: 90%;
  animation: html 3s;
}
@keyframes html {
  0% {
    width: 0%;
  }
  100% {
    width: 90%;
  }
}
.skill-bar .bar .css {
  width: 80%;
  animation: css 3s;
}
@keyframes css {
  0% {
    width: 0%;
  }
  100% {
    width: 80%;
  }
}
.skill-bar .bar .js {
  width: 60%;
  animation: js 3s;
}
@keyframes js {
  0% {
    width: 0%;
  }
  100% {
    width: 60%;
  }
}
.skill-bar .bar .tail {
  width: 70%;
  animation: tail 3s;
}
@keyframes tail {
  0% {
    width: 0%;
  }
  100% {
    width: 70%;
  }
}
.skill-bar .bar .react {
  width: 40%;
  animation: react 3s;
}
@keyframes react {
  0% {
    width: 0%;
  }
  100% {
    width: 40%;
  }
}
.skill-bar .bar .exp {
  width: 40%;
  animation: exp 3s;
}
@keyframes exp {
  0% {
    width: 0%;
  }
  100% {
    width: 40%;
  }
}
.skill-bar .bar .sql {
  width: 40%;
  animation: sql 3s;
}
@keyframes sql {
  0% {
    width: 0%;
  }
  100% {
    width: 40%;
  }
}
.skill-bar .bar .figma {
  width: 70%;
  animation: figma 3s;
}
@keyframes figma {
  0% {
    width: 0%;
  }
  100% {
    width: 70%;
  }
}

/* Project */

.project {
  padding: 8rem 7% 1.4rem;
}
.project .project-title {
  width: 100%;
  margin-bottom: 6rem;
  display: grid;
  place-items: center;
  text-align: center;
}
.project .project-title h2 {
  font-size: 4rem;
  font-weight: 500;
}
.project .project-title h2 span {
  color: var(--primary);
}
.project .project-title p {
  margin-top: 0.4rem;
  font-size: 1.2rem;
  font-weight: 300;
  color: #dbdbdb;
}
.project .project-title p > span {
  font-weight: 500;
  color: #fff;
  padding: 0.3rem 0.5rem;
  border: 1px solid var(--primary);
  /* background-color: var(--primary); */
}
.row-project {
  display: flex;
  justify-content: center;
  gap: 4rem;
}
.card-project {
  background-color: var(--bg);
  box-shadow: 3px 3px 10px rgba(0 0 0 / 0.5);
  width: 20rem;
}
.img-project {
  position: relative;
  height: 16rem;
  background-color: #dbdbdb;
  overflow: hidden;
}
.img-project img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  cursor: pointer;
}
.img-project::after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  bottom: 0;
  background-color: rgba(233, 69, 96, 0.1);
  cursor: pointer;
}
.img-project:hover::after {
  display: none;
}
.img-project:hover img {
  transform: scale(1.1);
  transition: all 1s ease-in-out;
}
.card-title {
  max-width: 26rem;
  display: grid;
  place-items: center;
  text-align: center;
}
/* ... */

